--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
     container_name: sqlserver
     ports:
       - "1433:1433"
+    volumes:
+      -sqlserver-data:/var/opt/mssql
     environment:
       - ACCEPT_EULA=Y
       - SA_PASSWORD=StrongPassword123!
